[gd_scene load_steps=3 format=2]

[ext_resource path="res://Lobby.gd" type="Script" id=1]
[ext_resource path="res://ip_servidor.gd" type="Script" id=2]

[node name="Lobby" type="Node2D"]
script = ExtResource( 1 )

[node name="panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 550.0
margin_bottom = 300.0
rect_min_size = Vector2( 550, 300 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox_cliente" type="VBoxContainer" parent="panel"]
margin_left = 15.0
margin_top = 21.0
margin_right = 198.0
margin_bottom = 181.0
rect_min_size = Vector2( 180, 160 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_ip" type="Label" parent="panel/vbox_cliente"]
margin_right = 183.0
margin_bottom = 14.0
text = "ip del servidor"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ip_servidor" type="TextEdit" parent="panel/vbox_cliente"]
margin_top = 18.0
margin_right = 183.0
margin_bottom = 48.0
rect_min_size = Vector2( 70, 30 )
text = "127.0.0.1"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox_labels_cliente" type="VBoxContainer" parent="panel/vbox_cliente"]
margin_top = 52.0
margin_right = 183.0
margin_bottom = 52.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="boton_conectar" type="Button" parent="panel/vbox_cliente"]
margin_top = 56.0
margin_right = 183.0
margin_bottom = 76.0
text = "Conectar"

[node name="vbox_server" type="VBoxContainer" parent="panel"]
margin_left = 276.0
margin_top = 23.0
margin_right = 510.0
margin_bottom = 212.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_lista_clientes" type="Label" parent="panel/vbox_server"]
margin_right = 234.0
margin_bottom = 14.0
text = "Lista de clientes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox_labels_servidor" type="VBoxContainer" parent="panel/vbox_server"]
margin_top = 18.0
margin_right = 234.0
margin_bottom = 18.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="boton_crear_servidor" type="Button" parent="panel/vbox_server"]
margin_top = 22.0
margin_right = 234.0
margin_bottom = 42.0
text = "Crear Servidor"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="boton_iniciar_partida" type="Button" parent="panel/vbox_server"]
margin_top = 46.0
margin_right = 234.0
margin_bottom = 66.0
text = "Iniciar Partida"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_changed" from="panel/vbox_cliente/ip_servidor" to="panel/vbox_cliente/ip_servidor" method="_on_ip_servidor_text_changed"]
[connection signal="pressed" from="panel/vbox_cliente/boton_conectar" to="." method="_on_boton_conectar_pressed"]
[connection signal="pressed" from="panel/vbox_server/boton_crear_servidor" to="." method="_on_boton_crear_servidor_pressed"]
[connection signal="pressed" from="panel/vbox_server/boton_iniciar_partida" to="." method="_on_boton_iniciar_partida_pressed"]
